Image slider success

--- a/products.html
+++ b/products.html
@@ -28,33 +28,33 @@
                 <div id="navlinks" class="hidden w-full px-6 bg-bgNavbar lg:block lg:bg-transparent lg:w-auto">
                     <ul class="pt-4 pb-6 text-lg lg:flex lg:items-center lg:space-x-10 lg:pt-0 lg:pb-0 duration-300">
                         <li>
-                            <a href="./index.html" class="text-white1 border-b-2 border-transparent lg:hover:border-greenAgro lg:hover:pb-1 hover:text-greenAgro block transition duration-300">
+                            <a href="./index.html" class="text-white1 font-poppins border-b-2 border-transparent lg:hover:border-greenAgro lg:hover:pb-1 hover:text-greenAgro block transition duration-300">
                                 <span>Home</span>
                             </a>
                         </li>
                         <li>
-                            <a href="./products.html" class="text-greenAgro border-b-2 border-transparent lg:border-greenAgro  hover:text-greenAgro block transition duration-300">
+                            <a href="./products.html" class="text-greenAgro font-poppins border-b-2 border-transparent lg:border-greenAgro  hover:text-greenAgro block transition duration-300">
                                 <span>Products</span>
                             </a>
                         </li>
                         <li>
-                            <a href="./aboutUs.html" class="text-white1 border-b-2 border-transparent lg:hover:border-greenAgro lg:hover:pb-1 hover:text-greenAgro block transition duration-300">
+                            <a href="./aboutUs.html" class="text-white1 font-poppins border-b-2 border-transparent lg:hover:border-greenAgro lg:hover:pb-1 hover:text-greenAgro block transition duration-300">
                                 <span>About Us</span>
                             </a>
                         </li>
                         <li>
-                            <a href="./termsAndCondition.html" class="text-white1 border-b-2 border-transparent lg:hover:border-greenAgro lg:hover:pb-1 hover:text-greenAgro block transition duration-300">
+                            <a href="./termsAndCondition.html" class="text-white1 font-poppins border-b-2 border-transparent lg:hover:border-greenAgro lg:hover:pb-1 hover:text-greenAgro block transition duration-300">
                                 <span>Terms and Condition</span>
                             </a>
                         </li>
                         <li>
-                            <a href="./gallery.html" class="text-white1 border-b-2 border-transparent lg:hover:border-greenAgro lg:hover:pb-1 hover:text-greenAgro block transition duration-300">
+                            <a href="./gallery.html" class="text-white1 font-poppins border-b-2 border-transparent lg:hover:border-greenAgro lg:hover:pb-1 hover:text-greenAgro block transition duration-300">
                                 <span>Gallery</span>
                             </a>
                         </li>
                         <li class="mt-4 lg:mt-0">
                             <a href="" class="block py-3 rounded w-full lg:w-full bg-greenContactUs hover:bg-bgNavbar focus:bg-bgNavbar active:bg-bgNavbar transition" >
-                                <span class="block lg:px-5 font-semibold text-white1 text-center">Contact Us</span>
+                                <span class="block lg:px-5 font-semibold text-white1 font-poppins text-center">Contact Us</span>
                             </a>
                         </li>
                         
