Revisi Landing page

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <div class="container m-auto py-3 lg:py-4 lg:h-auto">
             <div class="flex flex-wrap items-center justify-between">
                 <div class="relative z-50 w-full flex items-center justify-between lg:w-auto">
-                    <!-- logo -->
+                    <!-- logo Adaro Agro-->
                     <a href="./index.html">
-                        <img src="./assets/img/logo.png" alt="Adaro Agro" class="lg:w-10 w-8 ml-4 lg:pl-0 ">
+                        <img src="./assets/img/Adaro Agro.png" alt="Adaro Agro" class="lg:w-9 w-8 ml-4 lg:pl-0 ">
                     </a>
                     <!-- btn menu -->
                     <button id="hamburger" class="relative w-10 h-10 lg:hidden">
@@ -43,7 +43,7 @@
                 </div>
 
                 <div id="navlinks" class="hidden z-50 w-full px-6 bg-bgNavbar lg:block lg:bg-transparent lg:w-auto">
-                    <ul class="pt-4 pb-6 text-lg lg:flex lg:items-center lg:space-x-10 lg:pt-0 lg:pb-0 duration-300">
+                    <ul class="pt-4 pb-6 text-sm lg:flex lg:items-center lg:space-x-10 lg:pt-0 lg:pb-0 duration-300">
                         <li>
                             <a href="./index.html" class="text-greenAgro font-poppins border-b-2 border-transparent lg:border-greenAgro  hover:text-greenAgro block transition duration-300">
                                 <span>Home</span>
@@ -95,7 +95,7 @@
               </div>
               <p class="lg:text-3xl md:text-xl text-xs text-white font-montserrat font-thin lg:px-12 md:px-6 px-2 "> <em>"We bring local farmer <br> products to the world"</em></p>
             </div>
-            <div class="swiper-wrapper mt-20 lg:mt-24">
+            <div class="swiper-wrapper mt-20 lg:mt-20">
               <!-- Slides 1 -->
               <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="./assets/img/img_1.jpg" alt=""></div>
               <!-- Slide 2 -->
@@ -139,13 +139,16 @@
                 </div>
             </div>
 
-            <!-- Our Products -->
+            <!--                                                        Our Products                                                        -->
+
             <div style="background-image: url('./assets/img/bgOurProducts2.png');" class="w-full h-full absolute text-center lg:mt-72 mt-10 bg-no-repeat bg-left">
                 <!-- Judul "Our Products" -->
                 <div class="font-montserrat font-extrabold text-greenOurProduct lg:text-5xl md:text-3xl text-2xl">Our Products</div>
 
                 <!-- Grid Products -->
-                <div class="grid lg:grid-rows-2 md:grid-rows-6 grid-rows-6 grid-flow-col gap-4 gap-y-3 w-full mt-20">
+                <div class="grid lg:grid-rows-4 md:grid-rows-4 grid-rows-12 grid-flow-row lg:grid-flow-col md:grid-flow-col gap-4 gap-y-3 w-full mt-20">
+
+                    <!-- Betel Nut -->
                     <!-- Gambar Product -->
                     <div>
                         <img src="./assets/img/Betel Nuts.png" alt="" class="w-72 h-72 m-auto rounded-xl">
@@ -154,7 +157,7 @@
                     <div>
                         <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">Betel Nut</h1>
                         <div class="w-72 m-auto bg-white">
-                            <p class="text-blackText font-poppins lg:text-left text-justify lg:text-xl md:text-xl text-sm leading-8">Lorem ipsum dolor sit amet, consectetur adipiscing elitsed do eiusmod tempor incididunt ut labore et <span class="lg:text-gray-300 md:text-gray-300 text-blackText">dolore magna <span class="lg:text-gray-300 text-gray-300">aliqua...</span></span></p>
+                            <p class="text-blackText font-poppins lg:text-left text-justify lg:text-xl md:text-xl text-sm leading-8">Pungent, bitter, spicy, sweet, salty, and astringent. It is like chewing a wooden <span class="text-gray-300 lg:text-blackText">pencil <span class="lg:text-gray-300 md:text-gray-300 ">end minus the taste of...</span></span></p>
                             <a href="./products.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
                                 <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
@@ -162,6 +165,26 @@
                             </a>
                         </div>
                     </div>
+
+                    <!-- Cloves -->
+                    <!-- Gambar Product -->
+                    <div>
+                        <img src="./assets/img/Cloves.png" alt="" class="w-72 h-72 m-auto rounded-xl">
+                    </div>
+                    <!-- Deskripsi Product -->
+                    <div>
+                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">Cloves</h1>
+                        <div class="w-72 m-auto bg-white">
+                            <p class="text-blackText font-poppins lg:text-left text-justify lg:text-xl md:text-xl text-sm leading-8">Pungent, bitter, spicy, sweet, salty, and astringent. It is like chewing a wooden <span class="text-gray-300 lg:text-blackText">pencil <span class="lg:text-gray-300 md:text-gray-300 ">end minus the taste of...</span></span></p>
+                            <a href="./products.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
+                                <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Cinnamon Sticks -->
                     <!-- Gambar Product -->
                     <div>
                         <img src="./assets/img/Cinnamon Sticks.png" alt="" class="w-72 h-72 m-auto rounded-xl">
@@ -170,7 +193,7 @@
                     <div>
                         <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">Cinnamon Sticks</h1>
                         <div class="w-72 m-auto bg-white">
-                            <p class="text-blackText font-poppins lg:text-left text-justify lg:text-xl md:text-xl text-sm leading-8">Lorem ipsum dolor sit amet, consectetur adipiscing elitsed do eiusmod tempor incididunt ut labore et <span class="lg:text-gray-300 md:text-gray-300 text-blackText">dolore magna <span class="lg:text-gray-300 text-gray-300">aliqua...</span></span></p>
+                            <p class="text-blackText font-poppins lg:text-left text-justify lg:text-xl md:text-xl text-sm leading-8">A spice made from the bark of the Cinnamomum aromaticum tree. Cassia bark (both powdered and in <span class="lg:text-gray-300 md:text-gray-300 text-blackText">whole, or <span class="lg:text-gray-300 text-gray-300">"stick" form) is...</span></span></p>
                             <a href="./products.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
                                 <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
@@ -178,15 +201,53 @@
                             </a>
                         </div>
                     </div>
+
+                    <!-- Nutmeg -->
                     <!-- Gambar Product -->
                     <div>
-                        <img src="./assets/img/Cocoa Beans.png" alt="" class="w-72 h-72 m-auto rounded-xl">
+                        <img src="./assets/img/Nutmeg.png" alt="" class="w-72 h-72 m-auto rounded-xl">
                     </div>
                     <!-- Deskripsi Product -->
                     <div>
-                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">Cocoa Beans</h1>
+                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">Nutmeg</h1>
                         <div class="w-72 m-auto bg-white">
-                            <p class="text-blackText font-poppins lg:text-left text-justify lg:text-xl md:text-xl text-sm leading-8">Lorem ipsum dolor sit amet, consectetur adipiscing elitsed do eiusmod tempor incididunt ut labore et <span class="lg:text-gray-300 md:text-gray-300 text-blackText">dolore magna <span class="lg:text-gray-300 text-gray-300">aliqua...</span></span></p>
+                            <p class="text-blackText font-poppins lg:text-left text-justify lg:text-xl md:text-xl text-sm leading-8">A spice made from the bark of the Cinnamomum aromaticum tree. Cassia bark (both powdered and in <span class="lg:text-gray-300 md:text-gray-300 text-blackText">whole, or <span class="lg:text-gray-300 text-gray-300">"stick" form) is...</span></span></p>
+                            <a href="./products.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
+                                <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- White Cardamom -->
+                    <!-- Gambar Product -->
+                    <div>
+                        <img src="./assets/img/White Cardamom.png" alt="" class="w-72 h-72 m-auto rounded-xl">
+                    </div>
+                    <!-- Deskripsi Product -->
+                    <div>
+                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">White Cardamom</h1>
+                        <div class="w-72 m-auto bg-white">
+                            <p class="text-blackText font-poppins lg:text-left text-justify lg:text-xl md:text-xl text-sm leading-8">White Cardamom is an aromatic fruit that is used as a spice and also mixed as <span class="text-gray-300 ">herb. This is also used <span class="lg:text-gray-300 md:text-gray-300 ">for...</span></span></p>
+                            <a href="./products.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
+                                <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+
+                    <!-- Black Papper -->
+                    <!-- Gambar Product -->
+                    <div>
+                        <img src="./assets/img/Black Papper.png" alt="" class="w-72 h-72 m-auto rounded-xl">
+                    </div>
+                    <!-- Deskripsi Product -->
+                    <div>
+                        <h1 class="text-greenAgro font-montserrat font-bold lg:text-3xl text-xl py-4">Black Papper</h1>
+                        <div class="w-72 m-auto bg-white">
+                            <p class="text-blackText font-poppins lg:text-left text-justify lg:text-xl md:text-xl text-sm leading-8">White Cardamom is an aromatic fruit that is used as a spice and also mixed as <span class="text-gray-300 ">herb. This is also used <span class="lg:text-gray-300 md:text-gray-300 ">for...</span></span></p>
                             <a href="./products.html" class="flex text-blackSeeDetails lg:text-xl text-sm py-4 font-bold hover:text-2xl duration-300">SEE DETAILS
                                 <svg xmlns="http://www.w3.org/2000/svg" class="ml-2 lg:w-7 w-5 hover:w-10 duration-300" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
