All done except the product page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="relative z-50 w-full flex items-center justify-between lg:w-auto">
                     <!-- logo Adaro Agro-->
                     <a href="./index.html">
-                        <img src="./assets/img/Adaro Agro.png" alt="Adaro Agro" class="lg:w-9 w-8 ml-4 lg:pl-0 ">
+                        <img src="./assets/img/Adaro Agro.png" alt="Adaro Agro" class="lg:w-9 w-8 lg:ml-4 ml-6 lg:pl-0 ">
                     </a>
                     <!-- btn menu -->
                     <button id="hamburger" class="relative w-10 h-10 lg:hidden">
@@ -50,7 +50,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="./products.html" class="text-white font-poppins border-b-2 border-transparent lg:hover:border-greenAgro lg:hover:pb-1 hover:text-greenAgro block transition duration-300">
+                            <a href="./index.html#products" class="text-white font-poppins border-b-2 border-transparent lg:hover:border-greenAgro lg:hover:pb-1 hover:text-greenAgro block transition duration-300">
                                 <span>Products</span>
                             </a>
                         </li>
@@ -95,17 +95,21 @@
               </div>
               <p class="lg:text-3xl md:text-xl text-xs text-white font-montserrat font-thin lg:px-12 md:px-6 px-2 "> <em>"We bring local farmer <br> products to the world"</em></p>
             </div>
-            <div class="swiper-wrapper mt-20 lg:mt-20">
+            <div class="swiper-wrapper mt-16 lg:mt-20 z-40">
               <!-- Slides 1 -->
-              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="./assets/img/img_1.jpg" alt=""></div>
+              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="./assets/img/Landing Page/1-min.png" alt=""></div>
               <!-- Slide 2 -->
-              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="./assets/img/img_2.jpg" alt=""></div>
+              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="./assets/img/Landing Page/2-min.png" alt=""></div>
               <!-- Slide 3 -->
-              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="./assets/img/img_3.jpg" alt=""></div>
+              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="./assets/img/Landing Page/3-min.png" alt=""></div>
               <!-- Slide 4 -->
-              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="./assets/img/img_4.jpg" alt=""></div>
+              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="./assets/img/Landing Page/4-min.png" alt=""></div>
               <!-- Slide 5 -->
-              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="./assets/img/img_5.jpg" alt=""></div>
+              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="./assets/img/Landing Page/5-min.png" alt=""></div>
+              <!-- Slide 6 -->
+              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="./assets/img/Landing Page/6-min.png" alt=""></div>
+              <!-- Slide 7 -->
+              <div class="swiper-slide"><img class="object-center object-cover w-full h-full" src="./assets/img/Landing Page/7-min.png" alt=""></div>
 
             </div>
             <!-- If we need pagination -->
@@ -143,7 +147,7 @@
 
             <div style="background-image: url('./assets/img/bgOurProducts2.png');" class="w-full h-full absolute text-center lg:mt-72 mt-10 bg-no-repeat bg-left">
                 <!-- Judul "Our Products" -->
-                <div class="font-montserrat font-extrabold text-greenOurProduct lg:text-5xl md:text-3xl text-2xl">Our Products</div>
+                <div id="products" class="font-montserrat font-extrabold text-greenOurProduct lg:text-5xl md:text-3xl text-2xl">Our Products</div>
 
                 <!-- Grid Products -->
                 <div class="grid lg:grid-rows-4 md:grid-rows-4 grid-rows-12 grid-flow-row lg:grid-flow-col md:grid-flow-col gap-4 gap-y-3 w-full mt-20">
@@ -260,7 +264,7 @@
                 <!-- Btn Collaborate -->
                 <div class="w-full absolute lg:mt-20 mt-10 ">
                     <div>
-                        <a  href="" style="background-image: url(./assets/img/collaborate.png);" 
+                        <a  href="https://api.whatsapp.com/send?phone=6282273776665" style="background-image: url(./assets/img/collaborate.png);" 
                             class="bg-greenAgro hover:bg-greenOurProduct text-white w-auto m-auto font-montserrat font-semibold lg:p-8 p-3 rounded-2xl lg:text-4xl md:text-2xl text-md bg-no-repeat bg-left hover:bg-opacity-80 duration-300">
                             Ready To Collaborate? <span class="font-extrabold">Contact Us Now</span>
                         </a>
@@ -283,7 +287,7 @@
                         <div class="w-full px-5">
                             <div class="text-white grid lg:grid-cols-4 md:grid-cols-4 grid-cols-1 grid-flow-row gap-1 gap-y-3 pb-8 w-full">
                                 <div class="mt-14">
-                                    <img src="./assets/img/logo.png" alt="Adaro Agro" class="h-20 m-auto">
+                                    <img src="./assets/img/Adaro Agro.png" alt="Adaro Agro" class="h-16 m-auto pb-2">
                                     <div class="flex m-autu justify-center mt-4">
                                         <a href="https://www.instagram.com/adaroagro/">
                                             <img src="./assets/img/Instagram.png" alt="" class="w-8 mx-5 hover:w-9 duration-200">
@@ -306,7 +310,7 @@
                                 <div class="flex flex-col mt-14 font-poppins font-normal text-sm text-left">
                                     <div class="font-montserrat text-base font-extrabold pb-2">About Us</div>
                                     <a href="/aboutUs.html" class="pb-2 w-fit text-sm hover:text-base duration-300">News</a>
-                                    <a href="/products.html" class="w-fit text-sm hover:text-base duration-300">Products</a>
+                                    <a href="/index.html#products" class="w-fit text-sm hover:text-base duration-300">Products</a>
                                 </div>
                                 <div class="mt-14  w-fit">
                                     <div class="grid grid-cols-5 grid-flow-row gap-1">
@@ -327,6 +331,13 @@
                                         </div>
                                         <div class="font-poppins font-normal text-sm text-left col-span-4">
                                             support@adaroagro.com
+                                        </div>
+                                        <div></div>
+                                        <div class="text-greenAgro font-poppins font-normal text-sm text-left col-span-4 hover:scale-110 duration-300">
+                                            <a href="https://maps.app.goo.gl/F7GsJAVotwxCPaoW8">
+                                                <div>MAP & DIRECTION</div>
+                                                <div class="bg-greenAgro w-full inset-0 h-1 rounded-lg"></div>
+                                            </a>
                                         </div>
                                     </div>
                                 </div>
